# ai-pm-portfolio

./: .env.example  LICENSE  README.md  pyproject.toml
p1-hello-llm/: README.md  eval_runner.py  gold_set.csv  runs.csv  summary.csv
